--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <h1>Take Better Notes</h1>
 </body>
 </html>
