moved the h1 into a header, made a nav bar for html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
 </head>
 <body>
     <h1>Take Better Notes</h1>
+    <header>
+        <nav>
+            <ul>
+                <li>About</li>
+                <li>Docs</li>
+            </ul>
+        </nav>
+</header>
 </body>
 </html>
