made footer with img that have a clickable links

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Take Better Notes</h1>
     <header>
+        <h1>Take Better Notes</h1>
         <nav>
             <ul>
                 <li>About</li>
@@ -19,5 +19,10 @@
             </ul>
         </nav>
 </header>
+<footer>
+    <p>Keep in Touch</p>
+    <a href=" https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"> <img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png">
+    <a href=" https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png"> <img src="https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png">
+</footer>
 </body>
 </html>
