made aside for My notes part

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
             </ul>
         </nav>
 </header>
+<aside>
+    <h2>My Notes</h2>
+    <ul>
+        <li>note one</li>
+        <li>note two</li>
+    </ul>
+</aside>
 <footer>
     <p>Keep in Touch</p>
     <a href=" https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"> <img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png">
