modfied semantics closer to each use but need EDIT at the end

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
         <li>note two</li>
     </ul>
 </aside>
+<main>
+<p>New Note</p>
+<p>Dark Theme</p>
+<p>Text area</p>
+<p>Save</p>
+<p>Cancel</p>
+</main>
 <footer>
     <p>Keep in Touch</p>
     <a href=" https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"> <img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png">
