modified css for universal fonts, and different font for note taking

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <main>
 <p>New Note</p>
 <p>Dark Theme</p>
-<p>Text area</p>
+<p id="text_area" >Text area</p>
 <p>Save</p>
 <p>Cancel</p>
 </main>
