--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 </main>
 <footer>
     <p>Keep in Touch</p>
-    <a href=" https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"> <img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png">
-    <a href=" https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png"> <img src="https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png">
+    <a href=" https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"> <img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" alt="Linked In Logo" height="60" width="60"></a>
+    <a href=" https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png"> <img src="https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png" alt="Internet Line Logo" height="60" width="60"></a>
 </footer>
 </body>
 </html>
