--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </ul>
 </aside>
 <main>
-<p>New Note</p>
-<p>Dark Theme</p>
+<button class="New Note">New Note</button>
+<button>Dark Theme</button>
 <p id="text_area" >Text area</p>
-<p>Save</p>
-<p>Cancel</p>
+<button>Save</button>
+<button>Cancel</button>
 </main>
 <footer>
     <h3>Keep in Touch</h3>
