made classes for each button. NEED CSS EDIT for each

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </ul>
 </aside>
 <main>
-<button class="New Note">New Note</button>
-<button>Dark Theme</button>
-<p id="text_area" >Text area</p>
-<button>Save</button>
-<button>Cancel</button>
+<button class="note">New Note</button>
+<button class="dark_theme">Dark Theme</button>
+<textarea class="text_area">This is a placeholder</textarea>
+<button class="cancel">Save</button>
+<button id="cancel">Cancel</button>
 </main>
 <footer>
     <h3>Keep in Touch</h3>
