modified class and id on main for formatting purposes

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </ul>
 </aside>
 <main>
-<button class="note">New Note</button>
-<button class="dark_theme">Dark Theme</button>
-<textarea class="text_area">This is a placeholder</textarea>
-<button class="cancel">Save</button>
-<button id="cancel">Cancel</button>
+<button class="top_buttons" id="new_note">New Note</button>
+<button class="top_buttons" id="dark_theme">Dark Theme</button>
+<textarea id="text_area">This is a placeholder</textarea>
+<button class="bottom_buttons" id="save">Save</button>
+<button class="bottom_buttons" id="cancel">Cancel</button>
 </main>
 <footer>
     <h3>Keep in Touch</h3>
