modified class and id for main content , fixed button positions

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
     </ul>
 </aside>
 <main>
-<button class="top_buttons" id="new_note">New Note</button>
-<button class="top_buttons" id="dark_theme">Dark Theme</button>
+<div class="buttons">
+<button id="new_note">New Note</button>
+<button id="dark_theme">Dark Theme</button>
+</div>
 <textarea id="text_area">This is a placeholder</textarea>
-<button class="bottom_buttons" id="save">Save</button>
-<button class="bottom_buttons" id="cancel">Cancel</button>
+<div class="buttons">
+<button  id="save">Save</button>
+<button  id="cancel">Cancel</button>
+</div>
 </main>
 <footer>
     <h3>Keep in Touch</h3>
