fixed bottom buttons position

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
     </ul>
 </aside>
 <main>
-<div class="buttons">
+<div class="top_buttons">
 <button id="new_note">New Note</button>
 <button id="dark_theme">Dark Theme</button>
 </div>
 <textarea id="text_area">This is a placeholder</textarea>
-<div class="buttons">
+<div class="bottom_buttons">
 <button  id="save">Save</button>
 <button  id="cancel">Cancel</button>
 </div>
