--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="test2">
         <h1>Take Better Notes</h1>
         <nav>
             <ul>
@@ -19,25 +19,25 @@
             </ul>
         </nav>
 </header>
-<aside>
+<aside class="test1">
     <h2>My Notes</h2>
     <ul>
         <li>note one</li>
         <li>note two</li>
     </ul>
 </aside>
-<main>
+<main class="test2">
 <div class="top_buttons">
 <button id="new_note">New Note</button>
 <button id="dark_theme">Dark Theme</button>
 </div>
-<textarea id="text_area">This is a placeholder</textarea>
+<textarea id="text_area" placeholder="This is a placeholder"></textarea>
 <div class="bottom_buttons">
 <button  id="save">Save</button>
 <button  id="cancel">Cancel</button>
 </div>
 </main>
-<footer>
+<footer class="test2">
     <h3>Keep in Touch</h3>
     <a href=" https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" alt="Linked In Logo" height="60" width="60"></a>
     <a href=" https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png"><img src="https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png" alt="Internet Line Logo" height="60" width="60"></a>
