attempted changing position of footer to the bottom part but failed, NEED EDIT

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <button id="new_note">New Note</button>
 <button id="dark_theme">Dark Theme</button>
 </div>
-<textarea id="text_area" placeholder="This is a placeholder"></textarea>
+<textarea id="text_area" placeholder="This is a placeholder" wrap="hard" rows="10"></textarea>
 <div class="bottom_buttons">
 <button  id="save">Save</button>
 <button  id="cancel">Cancel</button>
