fixed footer for html and css for mobile default, adjusted grid for screen type but buttons NEED FIX

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <button id="new_note">New Note</button>
 <button id="dark_theme">Dark Theme</button>
 </div>
-<textarea id="text_area" placeholder="This is a placeholder" wrap="hard" rows="10"></textarea>
+<textarea id="text_area" placeholder="This is a placeholder" wrap="hard"></textarea>
 <div class="bottom_buttons">
 <button  id="save">Save</button>
 <button  id="cancel">Cancel</button>
@@ -39,8 +39,10 @@
 </main>
 <footer>
     <h3>Keep in Touch</h3>
+    <div class="footer_logo">
     <a href=" https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png"><img src="https://cdn3.iconfinder.com/data/icons/free-social-icons/67/linkedin_circle_color-512.png" alt="Linked In Logo" height="60" width="60"></a>
     <a href=" https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png"><img src="https://cdn0.iconfinder.com/data/icons/internet-line/512/Internet_Line-02-512.png" alt="Internet Line Logo" height="60" width="60"></a>
+    </div>
 </footer>
 </body>
 </html>
