made final changes, removed redundant css code, corrected some html issues from validator

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
-    <link href="css/stylesheets.css" rel="stylesheet" />
+    <link href="css/stylesheets.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
@@ -31,7 +31,7 @@
     <button id="new_note">New Note</button>
     <button id="dark_theme">Dark Theme</button>
 </div>
-<textarea id="text_area" placeholder="This is a placeholder" wrap="hard"></textarea>
+<textarea id="text_area" placeholder="This is a placeholder"></textarea>
 <div class="bottom_buttons">
     <button  id="save">Save</button>
     <button  id="cancel">Cancel</button>
