--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="css/stylesheets.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="scripts/scripts.js" defer></script>
 </head>
 <body>
     <header>
