changed the name of the id of the buttons to accomodate the classes that will be added

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 </aside>
 <main>
 <div class="top_buttons">
-    <button id="new_note">New Note</button>
-    <button id="dark_theme">Dark Theme</button>
+    <button id="new_note_button">New Note</button>
+    <button class="dark_theme_"id="dark_theme_button">Dark Theme</button>
 </div>
 <textarea id="text_area" placeholder="This is a placeholder"></textarea>
 <div class="bottom_buttons">
-    <button  id="save">Save</button>
-    <button  id="cancel">Cancel</button>
+    <button  id="save_button">Save</button>
+    <button  id="cancel_button">Cancel</button>
 </div>
 </main>
 <footer>
