removed id and switched to class to not have cascading issues when query selecting

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="scripts/scripts.js" defer></script>
 </head>
-<body>
+<body class="dark_theme">
     <header>
         <h1>Take Better Notes</h1>
         <nav>
@@ -21,21 +21,21 @@
         </nav>
 </header>
 <aside>
-    <h2>My Notes</h2>
-    <ul>
+    <h2 class="dark_theme">My Notes</h2>
+    <ul class="dark_theme">
         <li>note one</li>
         <li>note two</li>
     </ul>
 </aside>
 <main>
 <div class="top_buttons">
-    <button id="new_note_button">New Note</button>
-    <button class="dark_theme_"id="dark_theme_button">Dark Theme</button>
+    <button class="new_note_button">New Note</button>
+    <button  class="dark_theme_button">Dark Theme</button>
 </div>
-<textarea id="text_area" placeholder="This is a placeholder"></textarea>
+<textarea class="text_area" placeholder="This is a placeholder"></textarea>
 <div class="bottom_buttons">
-    <button  id="save_button">Save</button>
-    <button  id="cancel_button">Cancel</button>
+    <button class="save_button">Save</button>
+    <button class="cancel_button">Cancel</button>
 </div>
 </main>
 <footer>
