made text area dark themed when dark theme button is clicked

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="scripts/scripts.js" defer></script>
 </head>
-<body class="dark_theme">
+<body>
     <header>
         <h1>Take Better Notes</h1>
         <nav>
@@ -21,8 +21,8 @@
         </nav>
 </header>
 <aside>
-    <h2 class="dark_theme">My Notes</h2>
-    <ul class="dark_theme">
+    <h2>My Notes</h2>
+    <ul>
         <li>note one</li>
         <li>note two</li>
     </ul>
@@ -30,7 +30,7 @@
 <main>
 <div class="top_buttons">
     <button class="new_note_button">New Note</button>
-    <button  class="dark_theme_button">Dark Theme</button>
+    <button class="dark_theme_button">Dark Theme</button>
 </div>
 <textarea class="text_area" placeholder="This is a placeholder"></textarea>
 <div class="bottom_buttons">
