made background for aside and body dark when dark theme button is clicked

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="scripts/scripts.js" defer></script>
 </head>
-<body>
+<body class="body_area">
     <header>
         <h1>Take Better Notes</h1>
         <nav>
@@ -20,7 +20,7 @@
             </ul>
         </nav>
 </header>
-<aside>
+<aside class="aside_area">
     <h2>My Notes</h2>
     <ul>
         <li>note one</li>
