moved the font to the body so that the adding the class works

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     </ul>
 </aside>
 <main>
-<div class="top_buttons">
+<div class="top_buttons button">
     <button class="new_note_button">New Note</button>
     <button class="dark_theme_button">Dark Theme</button>
 </div>
 <textarea class="text_area" placeholder="This is a placeholder"></textarea>
-<div class="bottom_buttons">
+<div class="bottom_buttons button">
     <button class="save_button">Save</button>
     <button class="cancel_button">Cancel</button>
 </div>
