added hover abiiity on the list from css, added notes list to become clickable and find the respective content from the array

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
 <aside class="aside_area">
     <h2>My Notes</h2>
-    <ul>
+    <ul class="note_list">
         <li>note one</li>
         <li>note two</li>
     </ul>
